The search bar is functional.  It has a silght thorttle to sending api calls.  It shows users through min profiles and the  name of tags.  results  are a tags tahtredirect to the apporiate pages.  The autocom box  shows  when the input  sibling is focused on or when the autocom box is being hovered over.  This makes the box remain  visible if the user unfocse, cliccks outside,s  the searchbar and clicks inside the autocom box. This is  done thorugh css.   Need to  fix some  styling and limit the number of search results.  alos need to make a loading  component,  maybe  an animated svg.  I also need to work on the  styling of the search results. Another thing that I need to do is create a search results page where users can scroll through all the results, the user should  be redirected to the results page when they submit the searchbar input

--- a/src/components/SearchBar/searchbar.css
+++ b/src/components/SearchBar/searchbar.css
@@ -10,6 +10,17 @@
 
 }
 
+.topBar__search.contained:focus + .autocom-box{
+
+    display: block;
+
+}
+
+.autocom-box:hover{
+
+    display: block;
+}
+
 .searchBar_container{
     position: relative;
     display: flex;
@@ -25,6 +36,8 @@
 
 .autocom-box{
 
+    display: none;
+
     border: 2px solid var(--UIGrey1);
 
     border-top: 1px dotted var(--UIGrey1);
@@ -36,7 +49,7 @@
 
     position: absolute;
 
-    top: 1.9rem;
+    top: 1.75rem;
 
     background-color: var(--UIWhite);
 
@@ -45,6 +58,8 @@
     margin: 0;
 
     border-radius: 2px 2px 5px 5px;
+
+    z-index: 1;
 
 }
 
